Fix coming soon text to nowrap

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -102,7 +102,7 @@ $mint: #00c086;
     display: block;
     margin-bottom: 0.5rem;
     width: 3.5rem;
-    height: 10px;
+    height: 12px;
     background-color: $red;
 
     @media screen and (max-width: 30em) {
@@ -135,7 +135,7 @@ $mint: #00c086;
 
   h1 {
     color: $red;
-    font-size: 4.4rem;
+    font-size: 4.8rem;
     font-weight: 800;
     margin: 0;
 
@@ -191,6 +191,8 @@ $mint: #00c086;
     @media screen and (max-width: 30em) {
       font-size: 1.2rem;
       border-width: 4px;
+      white-space: nowrap;
+      padding: 1rem;
       display: block;
     }
   }
